--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -1,12 +1,12 @@
-#nav-down {
-    .top-menu {
-        a {
-            li {
-                font-weight: 700 !important;
-            }
-        }
-    }
-}
+// #nav-down {
+//     .top-menu {
+//         a {
+//             li {
+//                 font-weight: 700 !important;
+//             }
+//         }
+//     }
+// }
 
 @font-face {
     font-family: Open Sans;
