--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -375,6 +375,8 @@
             margin-left: 27%;
             position: relative;
             top: 13px;
+            font-weight: 700;
+            font-family: 'emoji';
         }
     }
 
@@ -460,19 +462,21 @@
                                 color: #fff;
                             }
 
-                          
+
                         }
                     }
                 }
             }
         }
-        &:hover{
+
+        &:hover {
             .functional-buttons {
                 opacity: 1;
 
             }
         }
-        .new{
+
+        .new {
             font-size: 13px;
             width: 41px;
             padding: 1px 4px 1px 8px;
@@ -673,13 +677,17 @@
     padding-top: 3%;
 
     .bride-img {
+        overflow: hidden;
         width: 100%;
         height: 100%;
-        padding-bottom: 8%;
 
         img {
+            transition: 0.8s;
             width: 100%;
             height: 100%;
+            &:hover{
+                transform: scale(1.1);
+            }
         }
     }
 }
@@ -700,7 +708,12 @@
 
 #block-carousel {
     margin-top: 3%;
-
+    .swiper-button-next{
+        display: none !important;
+    }
+    .swiper-button-prev{
+        display: none !important;
+    }
     .owl-item {
         height: 572px;
 
@@ -770,11 +783,6 @@
 
         }
 
-        .sub-title {
-            position: relative;
-            top: 35px;
-            color: #ffff;
-        }
     }
 }
 
@@ -793,6 +801,12 @@
         width: 420px;
         height: 419px;
         border: 1px solid #dfd7d7;
+
+        img {
+            width: 100%;
+            height: 100%;
+      
+        }
 
         .blogg {
             color: #e9ac98;
@@ -860,11 +874,10 @@
         }
 
         &:hover {
-
+          
             .blog-img {
                 opacity: 1;
                 height: 419px;
-
             }
 
             .blogg {
@@ -884,6 +897,13 @@
             }
 
         }
+        &:hover{
+            .primary-img{
+                   transform: scale(1) rotate(0);
+            }
+         
+
+          }
     }
 
 
