--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,9 @@
 @import './shop';
 @import './productDetail';
 @import './basket';
+@import './wishlist';
+@import './register';
+@import './login';
 @import './responsive';
 
 
