--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -12,6 +12,7 @@
             color: #3e3d3d;
             font-weight: 600;
             font-size: 1.375rem;
+            font-family: auto;
         }
 
         ul {
