--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -814,6 +814,7 @@ img.rot {
   color: #3e3d3d;
   font-weight: 600;
   font-size: 1.375rem;
+  font-family: auto;
 }
 #wrapper .page_text ul {
   list-style: none;
@@ -1439,6 +1440,26 @@ img.rot {
 #nav-area .right-area .basket a {
   color: #e9ac98;
 }
+#nav-area .login-register {
+  position: absolute;
+  right: 9%;
+  top: 18%;
+  width: 140px;
+  height: 59px;
+  border: 1px solid #eaeaea;
+  background: #fff;
+}
+#nav-area .login-register ul {
+  padding: 0px;
+}
+#nav-area .login-register ul li {
+  margin-left: 7px;
+  list-style: none;
+}
+#nav-area .login-register ul li a {
+  color: #666;
+  font-size: 15px;
+}
 
 #nav-down .top-menu {
   display: flex;
@@ -1669,6 +1690,10 @@ hr {
 }
 #footer-bottom .block-copyright span {
   color: #e9ac98;
+}
+
+#nav-down .top-menu a li {
+  font-weight: 700 !important;
 }
 
 @font-face {
@@ -2283,17 +2308,17 @@ hr {
   color: #5c3c30;
 }
 
-#products .table-area {
+#basket-table .table-area {
   box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 transparent, 0 1px 3px 0 rgba(0, 0, 0, 0.12) !important;
   border-radius: 4px;
   padding-bottom: 32px;
 }
-#products .table-products {
+#basket-table .table-products {
   margin-top: 53px;
   background: #fff;
   padding-top: 6px;
 }
-#products .table-products .table th {
+#basket-table .table-products .table th {
   height: 48px;
   text-align: center;
   color: rgba(0, 0, 0, 0.54);
@@ -2302,7 +2327,7 @@ hr {
   border-bottom-style: solid;
   border-color: black;
 }
-#products tbody td {
+#basket-table tbody td {
   padding: 8px;
   text-align: center;
   width: 203px;
@@ -2312,18 +2337,18 @@ hr {
   text-decoration: none;
   font-weight: 500;
 }
-#products tbody td:nth-child(2) {
+#basket-table tbody td:nth-child(2) {
   padding-top: 55px;
 }
-#products tbody td:nth-child(3) {
+#basket-table tbody td:nth-child(3) {
   padding-top: 55px;
   font-size: 21px;
   font-weight: 500;
 }
-#products tbody td:nth-child(4) {
+#basket-table tbody td:nth-child(4) {
   padding-top: 55px;
 }
-#products tbody td:nth-child(4) button {
+#basket-table tbody td:nth-child(4) button {
   padding: 0;
   min-width: 0;
   width: 40px;
@@ -2335,28 +2360,28 @@ hr {
   background-color: white;
   cursor: pointer;
 }
-#products tbody td:nth-child(4) button i {
+#basket-table tbody td:nth-child(4) button i {
   color: rgba(0, 0, 0, 0.54);
 }
-#products tbody td:nth-child(6) {
+#basket-table tbody td:nth-child(6) {
   padding-top: 55px;
   cursor: pointer;
 }
-#products tbody td:nth-child(5) {
+#basket-table tbody td:nth-child(5) {
   padding-top: 55px;
 }
-#products tbody td a {
+#basket-table tbody td a {
   color: rgba(0, 0, 0, 0.87);
   font-size: 1rem;
   text-decoration: none;
   font-weight: 500;
 }
-#products tbody td img {
+#basket-table tbody td img {
   width: 135px;
   height: 133px;
-  margin-right: 9px;
+  margin-right: 2px;
 }
-#products tbody td input {
+#basket-table tbody td input {
   width: 80px;
   text-align: center;
   background-color: #eee;
@@ -2364,18 +2389,18 @@ hr {
   border: 1px solid #e5e5e5;
   color: rgba(0, 0, 0, 0.54);
 }
-#products tbody .price {
+#basket-table tbody .price {
   padding-top: 38px;
   font-size: 21px;
   font-weight: 500;
   color: #b47259;
 }
-#products .footer-wish {
+#basket-table .footer-wish {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-#products .footer-wish .shop {
+#basket-table .footer-wish .shop {
   margin-left: 64px;
   margin-top: 2px;
   background-color: #e9ac98;
@@ -2385,14 +2410,248 @@ hr {
   width: 181px;
   height: 49px;
 }
-#products .footer-wish .shop a {
+#basket-table .footer-wish .shop a {
   color: #fff;
   text-decoration: none;
 }
-#products .footer-wish .total-price {
+#basket-table .footer-wish .total-price {
   font-weight: 500;
   font-size: 17px;
-  margin-right: 92px;
+  margin-right: 44px;
+}
+
+#wishlist-table .table-area {
+  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 transparent, 0 1px 3px 0 rgba(0, 0, 0, 0.12) !important;
+  border-radius: 4px;
+  padding-bottom: 32px;
+}
+#wishlist-table .table-products {
+  margin-top: 53px;
+  background: #fff;
+  padding-top: 6px;
+}
+#wishlist-table .table-products .table th {
+  height: 48px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 14px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-color: black;
+}
+#wishlist-table tbody td {
+  padding: 8px;
+  text-align: center;
+  width: 203px;
+  height: 103px;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+#wishlist-table tbody td:nth-child(2) {
+  padding-top: 55px;
+}
+#wishlist-table tbody td:nth-child(3) {
+  padding-top: 55px;
+  font-size: 21px;
+  font-weight: 500;
+}
+#wishlist-table tbody td:nth-child(4) {
+  padding-top: 55px;
+}
+#wishlist-table tbody td:nth-child(4) button {
+  padding: 0;
+  min-width: 0;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  line-height: 40px;
+  outline: none;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+#wishlist-table tbody td:nth-child(4) button i {
+  color: rgba(0, 0, 0, 0.54);
+}
+#wishlist-table tbody td a {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+#wishlist-table tbody td img {
+  width: 135px;
+  height: 133px;
+}
+#wishlist-table tbody .price {
+  padding-top: 38px;
+  font-size: 21px;
+  font-weight: 500;
+  color: #b47259;
+}
+#wishlist-table .footer-wish {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#wishlist-table .footer-wish .shop {
+  margin-left: 64px;
+  margin-top: 2px;
+  background-color: #e9ac98;
+  border-color: #e9ac98;
+  text-align: center;
+  cursor: pointer;
+  width: 181px;
+  height: 49px;
+}
+#wishlist-table .footer-wish .shop a {
+  color: #fff;
+  text-decoration: none;
+}
+#wishlist-table .footer-wish .total-price {
+  font-weight: 500;
+  font-size: 17px;
+  margin-right: 90px;
+}
+
+#register {
+  padding-top: 71px;
+}
+#register .form-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#register .form-login-wrap {
+  padding: 50px;
+  background: #f6f6f6;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+#register .form-login-wrap .input-text,
+#register .form-login-wrap .password {
+  display: block;
+  width: 836px;
+  padding: 12px;
+  background-color: #fff;
+  color: #4b5955;
+  border-width: 0 0 1px;
+  border-style: solid;
+  border-color: #ccc;
+  font-weight: 400;
+  border-radius: 0;
+  outline: 0;
+}
+#register .form-login-wrap .required {
+  margin-left: 5px;
+  color: #e2401c;
+}
+#register .form-login-wrap h2 {
+  font-family: Marcellus;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 27px;
+}
+#register .form-login-wrap button {
+  border: none;
+  border-radius: 0;
+  background: 0 0;
+  background-color: #de9076;
+  border-color: #de9076;
+  color: #fff;
+  cursor: pointer;
+  padding: 12px;
+  text-decoration: none;
+  text-shadow: none;
+  width: 208px;
+  margin-top: 22px;
+  margin-bottom: 32px;
+}
+#register .form-login-wrap label {
+  color: #000;
+  display: block;
+  margin-bottom: 5px;
+}
+#register .form-login-wrap .area-password {
+  position: relative;
+}
+#register .form-login-wrap .area-password i {
+  position: absolute;
+  bottom: 16px;
+  right: 23px;
+  color: #de9076;
+}
+
+#register {
+  padding-top: 71px;
+}
+#register .form-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#register .form-login-wrap {
+  padding: 50px;
+  background: #f6f6f6;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+#register .form-login-wrap .input-text,
+#register .form-login-wrap .password {
+  display: block;
+  width: 836px;
+  padding: 12px;
+  background-color: #fff;
+  color: #4b5955;
+  border-width: 0 0 1px;
+  border-style: solid;
+  border-color: #ccc;
+  font-weight: 400;
+  border-radius: 0;
+  outline: 0;
+}
+#register .form-login-wrap .required {
+  margin-left: 5px;
+  color: #e2401c;
+}
+#register .form-login-wrap h2 {
+  font-family: Marcellus;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 27px;
+}
+#register .form-login-wrap button {
+  border: none;
+  border-radius: 0;
+  background: 0 0;
+  background-color: #de9076;
+  border-color: #de9076;
+  color: #fff;
+  cursor: pointer;
+  padding: 12px;
+  text-decoration: none;
+  text-shadow: none;
+  width: 208px;
+  margin-top: 22px;
+  margin-bottom: 32px;
+}
+#register .form-login-wrap label {
+  color: #000;
+  display: block;
+  margin-bottom: 5px;
+}
+#register .form-login-wrap .area-password {
+  position: relative;
+}
+#register .form-login-wrap .area-password i {
+  position: absolute;
+  bottom: 16px;
+  right: 23px;
+  color: #de9076;
 }
 
 @media (min-width: 0) and (max-width: 850px) {
